release/assignment/secure-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: onlineboutique
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "onlineboutique.example.com"
    tls:
      mode: SIMPLE
      credentialName: onlineboutique-credential
