release/assignment/product-svc.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-svc
spec:
  hosts:
  - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
    fault:
      delay:
        fixedDelay: 5s
        percent: 100
